--- a/src/paymentMethod.form
+++ b/src/paymentMethod.form
@@ -21,7 +21,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value=""/>
+          <text value="Card Number: "/>
         </properties>
       </component>
       <component id="7715" class="javax.swing.JTextField" binding="expiryDateTextField">
@@ -37,7 +37,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value=""/>
+          <text value="Confirm"/>
         </properties>
       </component>
       <component id="289a3" class="javax.swing.JLabel" binding="expiryDateLabel">
@@ -45,7 +45,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value=" "/>
+          <text value=" Expiry Date:"/>
         </properties>
       </component>
       <component id="e5780" class="javax.swing.JLabel" binding="validateLabel">
