--- a/src/paymentMethod.form
+++ b/src/paymentMethod.form
@@ -48,7 +48,7 @@
           <text value=" Expiry Date:"/>
         </properties>
       </component>
-      <component id="e5780" class="javax.swing.JLabel" binding="validateLabel">
+      <component id="e5780" class="javax.swing.JLabel" binding="validateLabel" custom-create="true">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
