idk what im doing

--- a/src/Menu.form
+++ b/src/Menu.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Menu">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="53" y="55" width="890" height="571"/>
+      <xy x="62" y="55" width="881" height="401"/>
     </constraints>
     <properties>
       <enabled value="true"/>
@@ -55,317 +55,11 @@
           </component>
         </children>
       </grid>
-      <grid id="9299b" binding="panelBurger" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+      <vspacer id="2e36c">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="434" height="47"/>
-          </grid>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
-        <border type="line" title="Food" title-justification="1">
-          <font style="1"/>
-          <color color="-16777216"/>
-        </border>
-        <children>
-          <component id="1ecba" class="javax.swing.JLabel" binding="labelChickenBurger">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="95" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="1. Chicken Burger"/>
-            </properties>
-          </component>
-          <component id="df0fa" class="javax.swing.JLabel" binding="labelBeefBurger">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="95" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="2. Beef Burger"/>
-            </properties>
-          </component>
-          <component id="f9c8a" class="javax.swing.JLabel" binding="labelBenjo">
-            <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="95" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="3. Benjo"/>
-            </properties>
-          </component>
-          <component id="ce6b5" class="javax.swing.JLabel" binding="labelHotDog">
-            <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="95" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="4.HotDog"/>
-            </properties>
-          </component>
-          <component id="6d8e2" class="javax.swing.JLabel" binding="labelFoodQuantity">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="5" use-parent-layout="false">
-                <preferred-size width="177" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="Quantity"/>
-            </properties>
-          </component>
-          <component id="5e532" class="javax.swing.JTextField" binding="textFieldChickenBurge">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="177" height="30"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="67c72" class="javax.swing.JTextField" binding="textFieldBeefBurger">
-            <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="177" height="30"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="b8d2a" class="javax.swing.JTextField" binding="textFieldBenjo">
-            <constraints>
-              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="177" height="30"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
-          </component>
-          <component id="776ef" class="javax.swing.JTextField" binding="textFieldHotdog">
-            <constraints>
-              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="177" height="30"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-        </children>
-      </grid>
-      <grid id="ae8c9" binding="panelSoftDrinks" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="434" height="47"/>
-          </grid>
-        </constraints>
-        <properties/>
-        <border type="line" title="Drinks" title-justification="1">
-          <font style="1"/>
-          <color color="-16777216"/>
-        </border>
-        <children>
-          <component id="9a81e" class="javax.swing.JLabel" binding="labelDrinksCoke">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="94" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="1. Coke"/>
-            </properties>
-          </component>
-          <component id="895a" class="javax.swing.JLabel" binding="labelDrinks100plus">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="94" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="2. 100 Plus"/>
-            </properties>
-          </component>
-          <component id="8489d" class="javax.swing.JLabel" binding="labelDrinksSprite">
-            <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="94" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="3. Sprite"/>
-            </properties>
-          </component>
-          <component id="7db76" class="javax.swing.JLabel" binding="labelDrinksFanta">
-            <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="94" height="16"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="4. Fanta"/>
-            </properties>
-          </component>
-          <component id="db51f" class="javax.swing.JLabel" binding="labelDrinksQuantity">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="5" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Quantity"/>
-            </properties>
-          </component>
-          <component id="7046c" class="javax.swing.JTextField" binding="textFieldCoke">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="177" height="30"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="8d14d" class="javax.swing.JTextField" binding="textField100Plus">
-            <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="177" height="30"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="98f49" class="javax.swing.JTextField" binding="textFieldSprite">
-            <constraints>
-              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="177" height="30"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="a52a9" class="javax.swing.JTextField" binding="textFieldFanta">
-            <constraints>
-              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="177" height="30"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-        </children>
-      </grid>
-      <grid id="9403e" binding="panelSideDishes" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="line" title="Side Dishes" title-justification="2">
-          <font/>
-          <color color="-16777216"/>
-        </border>
-        <children>
-          <component id="e2b7a" class="javax.swing.JLabel" binding="labelSideDishesFries">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="1. Fries"/>
-            </properties>
-          </component>
-          <component id="d2846" class="javax.swing.JLabel" binding="labelSideDishesOnionRing">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="2. Onion Ring"/>
-            </properties>
-          </component>
-          <component id="beeec" class="javax.swing.JLabel" binding="labelSideDishesSquidRing">
-            <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="3. Squid Ring"/>
-            </properties>
-          </component>
-          <component id="31677" class="javax.swing.JLabel" binding="labelSideDishesCurlyFries">
-            <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="4. Curly Fries"/>
-            </properties>
-          </component>
-          <component id="621b5" class="javax.swing.JLabel" binding="labelSideDishesNuggets">
-            <constraints>
-              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="5. Nuggets"/>
-            </properties>
-          </component>
-          <component id="2813" class="javax.swing.JLabel" binding="labelSideDishesWedges">
-            <constraints>
-              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="6. Wedges"/>
-            </properties>
-          </component>
-          <component id="5a68f" class="javax.swing.JLabel" binding="labelSideDishesQuantity">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="5" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Quantity"/>
-            </properties>
-          </component>
-          <component id="3bbc0" class="javax.swing.JTextField" binding="textField1" default-binding="true">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="ea3e3" class="javax.swing.JTextField" default-binding="true">
-            <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="73024" class="javax.swing.JTextField" default-binding="true">
-            <constraints>
-              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="35aed" class="javax.swing.JTextField" default-binding="true">
-            <constraints>
-              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="e1613" class="javax.swing.JTextField" default-binding="true">
-            <constraints>
-              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="bb287" class="javax.swing.JTextField" default-binding="true">
-            <constraints>
-              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-        </children>
-      </grid>
+      </vspacer>
     </children>
   </grid>
 </form>
