comment and delete useless table custom code

--- a/src/Menu.form
+++ b/src/Menu.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="126" y="60" width="847" height="367"/>
+      <xy x="82" y="60" width="627" height="408"/>
     </constraints>
     <properties>
       <enabled value="true"/>
@@ -128,7 +128,7 @@
                     </constraints>
                     <properties/>
                   </component>
-                  <component id="59d4a" class="javax.swing.JSpinner" binding="spinnerBenjo" custom-create="true">
+                  <component id="59d4a" class="javax.swing.JSpinner" binding="spinnerBenjo">
                     <constraints>
                       <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                         <preferred-size width="55" height="20"/>
@@ -136,7 +136,7 @@
                     </constraints>
                     <properties/>
                   </component>
-                  <component id="bcf9" class="javax.swing.JSpinner" binding="spinnerHotdog" custom-create="true">
+                  <component id="bcf9" class="javax.swing.JSpinner" binding="spinnerHotdog">
                     <constraints>
                       <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                         <preferred-size width="55" height="20"/>
