--- a/src/displayPayment.form
+++ b/src/displayPayment.form
@@ -73,7 +73,7 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="2e6e3" class="javax.swing.JLabel" binding="displayCardNumLabel" custom-create="true">
+      <component id="2e6e3" class="javax.swing.JLabel" binding="displayCardNumLabel">
         <constraints>
           <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -91,13 +91,13 @@
           <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="90b4f" class="javax.swing.JLabel" binding="displayCustomerNameLabel" custom-create="true">
+      <component id="90b4f" class="javax.swing.JLabel" binding="displayCustomerNameLabel">
         <constraints>
           <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
-      <component id="26b88" class="javax.swing.JLabel" binding="displayAddressLabel" custom-create="true">
+      <component id="26b88" class="javax.swing.JLabel" binding="displayAddressLabel">
         <constraints>
           <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
