--- a/src/Register.form
+++ b/src/Register.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Register">
-  <grid id="27dc6" binding="Panel" layout-manager="GridLayoutManager" row-count="7" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="Panel" layout-manager="GridLayoutManager" row-count="6" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="22" y="15" width="704" height="390"/>
@@ -10,7 +10,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="a4a65" class="javax.swing.JLabel" binding="Cust_Name">
+      <component id="a4a65" class="javax.swing.JLabel" binding="NameLabel">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="64" height="16"/>
@@ -20,7 +20,7 @@
           <text value="Name:"/>
         </properties>
       </component>
-      <component id="655cc" class="javax.swing.JLabel" binding="Cust_email" custom-create="true">
+      <component id="655cc" class="javax.swing.JLabel" binding="EmailLabel">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -49,22 +49,12 @@
           <text value="Registration Form"/>
         </properties>
       </component>
-      <component id="45ae6" class="javax.swing.JTextField" binding="Name">
-        <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <toolTipText value=""/>
-        </properties>
-      </component>
       <vspacer id="a96a4">
         <constraints>
-          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="7dc75" class="javax.swing.JLabel" binding="Cust_PhoneNo">
+      <component id="7dc75" class="javax.swing.JLabel" binding="ContactNumberLabel">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -72,7 +62,7 @@
           <text value="Contact Number:"/>
         </properties>
       </component>
-      <component id="adb6c" class="javax.swing.JLabel" binding="Cust_Add">
+      <component id="adb6c" class="javax.swing.JLabel" binding="AddressLabel">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -80,7 +70,23 @@
           <text value="Address:"/>
         </properties>
       </component>
-      <component id="615c1" class="javax.swing.JTextField" binding="Email">
+      <component id="2b636" class="javax.swing.JButton" binding="RegisterJButton">
+        <constraints>
+          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Register"/>
+        </properties>
+      </component>
+      <component id="81d17" class="javax.swing.JTextField" binding="NameTextField">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="5abe0" class="javax.swing.JTextField" binding="emailTextField">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -88,17 +94,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="7ef59" class="javax.swing.JTextField" binding="Address2">
-        <constraints>
-          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value=""/>
-        </properties>
-      </component>
-      <component id="89f7a" class="javax.swing.JTextField" binding="ContactNo">
+      <component id="a2b73" class="javax.swing.JTextField" binding="ContactTextField">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -106,21 +102,13 @@
         </constraints>
         <properties/>
       </component>
-      <component id="53dce" class="javax.swing.JTextField" binding="Address">
+      <component id="72258" class="javax.swing.JTextField" binding="AddressTextField">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties/>
-      </component>
-      <component id="2b636" class="javax.swing.JButton" binding="Register">
-        <constraints>
-          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Register"/>
-        </properties>
       </component>
     </children>
   </grid>
